<resources>
    <string name="app_name">Tic-Tac-Toe App</string>
    <string name="player1">Player 1: </string>
    <string name="player2">Player 2: </string>
    <string name="reset_button">Reset</string>

    <string name="button1"></string>
    <string name="button2"></string>
    <string name="button3"></string>
    <string name="button4"></string>
    <string name="button5"></string>
    <string name="button6"></string>
    <string name="button7"></string>
    <string name="button8"></string>
    <string name="button9"></string>

    <string name="player_name1">Player1</string>
    <string name="player_name2">Player2</string>

    <string name="dev">Developed by Saurav Kalsoor</string>


</resources>
